--- a/src/app/components/registrardoacao/registrardoacao.component.html
+++ b/src/app/components/registrardoacao/registrardoacao.component.html
@@ -14,7 +14,7 @@
            
             <form #signupForm="ngForm">
 
-                <label for="description">Descrição</label>
+                <label for="description">Descrição<span class="red">*</span></label>
                 <textarea class="caixa-texto-p mar-baixo-1 rounded" id="description" name="description" placeholder="Descreva a doação. Exemplo: itens presentes, quantidade, etc" ngModel required rows=6 cols=55></textarea>
 
                 <label for="user">Nome de usuário</label>
