--- a/src/app/components/navinstituicao/navinstituicao.component.html
+++ b/src/app/components/navinstituicao/navinstituicao.component.html
@@ -1,13 +1,13 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <nav class="navbar d-f navbar-light bg-light">
-    <a class="navbar-brand" href="#"><h3><img class="largura-1" src="logopng.png" alt="">Apoio a Doação</h3></a>
+    <a class="navbar-brand" routerLink="/homeinstituicao"><h3><img class="largura-1" src="logopng.png" alt="">Apoio a Doação</h3></a>
   
     <div id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto">
       </ul>
       <a routerLink="/profileinstituicao"><img class="mar-r-l largura-1 border-hover radius-pattern" src="user.png" alt=""></a>
-
-      <button (click)="openModal()" class="btn btn-outline-primary my-2 my-sm-0">Sair</button>
+      <button (click)="openModal()" class="btn btn-outline-primary my-2 my-sm-0 mar-r-l">Sair</button>
+      <button routerLink="/sobresite" class="btn btn-outline-primary my-2 my-sm-0 mar-r-l">Sobre o site</button>
 
       <app-modal [showModal]="showModal" (closeModal)="closeModal()">
         <h2>Confirmação!</h2>
