--- a/src/app/components/registrardoacao/registrardoacao.component.css
+++ b/src/app/components/registrardoacao/registrardoacao.component.css
@@ -19,7 +19,7 @@ label{
     justify-items: center;
     min-height: 100vh;
 }
-.error {
+.red {
   color: rgb(255, 57, 57);
   font-weight: bold;
 }
